# meilisearch-importer

./: Cargo.toml  Makefile  README.md  SERVER_README.md  SERVER_SUMMARY.md  config.json  demo.sh  example_config.json  test_server.sh
src/: lib.rs  server.rs
