[package]
name = "meilisearch-importer"
description = "A tool to import massive datasets into Meilisearch by sending them in batches"
version = "0.2.4"
repository = "https://github.com/meilisearch/meilisearch-importer"
license = "MIT"
edition = "2021"

[dependencies]
byte-unit = { version = "5.1", features = ["byte", "serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
bytes = "1.5"
actix-web = "4.4"
actix-files = "0.6"
exponential-backoff = "0.1"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.12"

[[bin]]
name = "meilisearch-importer-server"
path = "src/bin/server.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
